--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
 <!--wowslider--><!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/mountainbiking1500600.jpg" alt="Mountain-Biking" title="Mountain-Biking" id="wows1_0"/></li>
-		<li><img src="data1/images/banasurafalls1500600.jpg" alt="Banasura-Falls" title="Banasura-Falls" id="wows1_1"/></li>
-		<li><img src="data1/images/adventureimage1500600.jpg" alt="Adventure- Ride" title="Adventure- Ride" id="wows1_2"/></li>
-		<li><img src="data1/images/deerimage1500600.jpg" alt="Wild-  deers" title="Wild-  deers" id="wows1_3"/></li>
+		<li><img src="mountainbiking1500600.jpg" alt="Mountain-Biking" title="Mountain-Biking" id="wows1_0"/></li>
+		<li><img src="banasurafalls1500600.jpg" alt="Banasura-Falls" title="Banasura-Falls" id="wows1_1"/></li>
+		<li><img src="adventureimage1500600.jpg" alt="Adventure- Ride" title="Adventure- Ride" id="wows1_2"/></li>
+		<li><img src="deerimage1500600.jpg" alt="Wild-  deers" title="Wild-  deers" id="wows1_3"/></li>
 		<li><img src="data1/images/rockclimbing1500600.jpg" alt="Rock-Climbing" title="Rock-Climbing" id="wows1_4"/></li>
 		<li><img src="data1/images/roperiding500350.jpg" alt="Rope-Riding" title="Rope-Riding" id="wows1_5"/></li>
 		<li><img src="data1/images/adventboating500500.jpg" alt="Adventure Boating" title="Adventure Boating" id="wows1_6"/></li>
