--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>PROJECT-HOMEPAGE</title>
+<title>HOMEPAGE</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -165,12 +165,12 @@
         <!-- Collection of nav links and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
- <li><a href="project-homepage1.html" style="color:#0F0; font-family:'Comic Sans MS', cursive; margin-left:300px"><h4>Home</h4>
+ <li><a href="index.html" style="color:#0F0; font-family:'Comic Sans MS', cursive; margin-left:300px"><h4>Home</h4>
  </a></li>        
-         <li><a href="wildlife1.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Things To  Do </h4></a></li>
-        <li><a href="food-n-drink.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Food&Drink </h4> </a></li>
-           <li><a href="places-to-stay1.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Places To stay </h4></a></li>
-           <li><a href="contact1.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Contact </h4></a></li>
+         <li><a href="wildlife1_gt.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Things To  Do </h4></a></li>
+        <li><a href="food-n-drink_gt.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Food&Drink </h4> </a></li>
+           <li><a href="places-to-stay1_gt.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Places To stay </h4></a></li>
+           <li><a href="contact1_gt.html" style="color:#0F0; font-family:'Comic Sans MS', cursive"><h4>Contact </h4></a></li>
                       
             </ul>
             
