--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <a class="zoom">
-                <img src="Images1/the-windflower-resort-550-368.jpg" class="img-responsive" alt="Nature Portfolio" />
+                <img src="the-windflower-resort-550-368.jpg" class="img-responsive" alt="Nature Portfolio" />
                 <br><br>
                 <p2><H5>THE WINDFLOWER RESORT</H5></p2>
             </a>
@@ -326,7 +326,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <a class="zoom">
-                <img src="Images1/vythiri-resort-550-365.jpg" class="img-responsive"  alt="Nature Portfolio" />
+                <img src="vythiri-resort-550-365.jpg" class="img-responsive"  alt="Nature Portfolio" />
                 <br><br>
                 <!--wildlife achor tag-->
                 
@@ -342,7 +342,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <a class="zoom">
-                <img src="Images1/wayanad-silver-woods-500-377.jpg" class="img-responsive" alt="Nature Portfolio" />
+                <img src="wayanad-silver-woods-500-377.jpg" class="img-responsive" alt="Nature Portfolio" />
                 <br><br>
                 <p2><H5>WAYANAD SILVER WOODS RESORT</H5></p2>
                 
@@ -385,8 +385,8 @@
 <div class="col-md-2">
 
 <h3><p3>C O N T A C T</h3></p3>
-<h5><p1>Office : 0495-2345678<h5><p1>
-<h5><p1>Mobile : 9876543210<h5><p1>
+<h5><p1>Office : 0495-222222<h5><p1>
+<h5><p1>Mobile : 99999999<h5><p1>
 
 </div>
 
