--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 		<li><img src="adventureimage1500600.jpg" alt="Adventure- Ride" title="Adventure- Ride" id="wows1_2"/></li>
 		<li><img src="deerimage1500600.jpg" alt="Wild-  deers" title="Wild-  deers" id="wows1_3"/></li>
 		<li><img src="rockclimbing1500600.jpg" alt="Rock-Climbing" title="Rock-Climbing" id="wows1_4"/></li>
-		<li><img src="data1/images/roperiding500350.jpg" alt="Rope-Riding" title="Rope-Riding" id="wows1_5"/></li>
-		<li><img src="data1/images/adventboating500500.jpg" alt="Adventure Boating" title="Adventure Boating" id="wows1_6"/></li>
-		<li><a href="#"><img src="data1/images/birdwatching500400.jpg" alt="bootstrap carousel" title="Bird-Watching" id="wows1_7"/></a></li>
-		<li><img src="data1/images/elephants500500.jpg" alt="Cute Elephants" title="Cute Elephants" id="wows1_8"/></li>
+		<li><img src="roperiding500350.jpg" alt="Rope-Riding" title="Rope-Riding" id="wows1_5"/></li>
+		<li><img src="adventboating500500.jpg" alt="Adventure Boating" title="Adventure Boating" id="wows1_6"/></li>
+		<li><a href="#"><img src="birdwatching500400.jpg" alt="bootstrap carousel" title="Bird-Watching" id="wows1_7"/></a></li>
+		<li><img src="elephants500500.jpg" alt="Cute Elephants" title="Cute Elephants" id="wows1_8"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
 		<a href="#" title="Mountain-Biking"><span><img src="data1/tooltips/mountainbiking1500600.jpg" alt="Mountain-Biking"/>1</span></a>
@@ -203,8 +203,8 @@
 	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="#">slider</a> by WOWSlider.com v8.7</div>
 	<div class="ws_shadow"></div>
 	</div>	
-	<script type="text/javascript" src="engine1/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
+	<script type="text/javascript" src="wowslider.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 
 
