--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@
 		<li><img src="rockclimbing1500600.jpg" alt="Rock-Climbing" title="Rock-Climbing" id="wows1_4"/></li>
 		<li><img src="roperiding500350.jpg" alt="Rope-Riding" title="Rope-Riding" id="wows1_5"/></li>
 		<li><img src="adventboating500500.jpg" alt="Adventure Boating" title="Adventure Boating" id="wows1_6"/></li>
-		<li><a href="#"><img src="birdwatching500400.jpg" alt="bootstrap carousel" title="Bird-Watching" id="wows1_7"/></a></li>
+		<li><img src="birdwatching500400.jpg" alt="Bird watching" title="Bird-Watching" id="wows1_7"/></a></li>
 		<li><img src="elephants500500.jpg" alt="Cute Elephants" title="Cute Elephants" id="wows1_8"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="Mountain-Biking"><span><img src="data1/tooltips/mountainbiking1500600.jpg" alt="Mountain-Biking"/>1</span></a>
-		<a href="#" title="Banasura-Falls"><span><img src="data1/tooltips/banasurafalls1500600.jpg" alt="Banasura-Falls"/>2</span></a>
-		<a href="#" title="Adventure- Ride"><span><img src="data1/tooltips/adventureimage1500600.jpg" alt="Adventure- Ride"/>3</span></a>
-		<a href="#" title="Wild-  deers"><span><img src="data1/tooltips/deerimage1500600.jpg" alt="Wild-  deers"/>4</span></a>
-		<a href="#" title="Rock-Climbing"><span><img src="data1/tooltips/rockclimbing1500600.jpg" alt="Rock-Climbing"/>5</span></a>
-		<a href="#" title="Rope-Riding"><span><img src="data1/tooltips/roperiding500350.jpg" alt="Rope-Riding"/>6</span></a>
-		<a href="#" title="Adventure Boating"><span><img src="data1/tooltips/adventboating500500.jpg" alt="Adventure Boating"/>7</span></a>
-		<a href="#" title="Bird-Watching"><span><img src="data1/tooltips/birdwatching500400.jpg" alt="Bird-Watching"/>8</span></a>
-		<a href="#" title="Cute Elephants"><span><img src="data1/tooltips/elephants500500.jpg" alt="Cute Elephants"/>9</span></a>
+		<a href="#" title="Mountain-Biking"><span><img src="mountainbiking1500600.jpg" alt="Mountain-Biking"/>1</span></a>
+		<a href="#" title="Banasura-Falls"><span><img src="banasurafalls1500600.jpg" alt="Banasura-Falls"/>2</span></a>
+		<a href="#" title="Adventure- Ride"><span><img src="adventureimage1500600.jpg" alt="Adventure- Ride"/>3</span></a>
+		<a href="#" title="Wild-deers"><span><img src="deerimage1500600.jpg" alt="Wild-deers"/>4</span></a>
+		<a href="#" title="Rock-Climbing"><span><img src="rockclimbing1500600.jpg" alt="Rock-Climbing"/>5</span></a>
+		<a href="#" title="Rope-Riding"><span><img src="roperiding500350.jpg" alt="Rope-Riding"/>6</span></a>
+		<a href="#" title="Adventure Boating"><span><img src="adventboating500500.jpg" alt="Adventure Boating"/>7</span></a>
+		<a href="#" title="Bird-Watching"><span><img src="birdwatching500400.jpg" alt="Bird-Watching"/>8</span></a>
+		<a href="#" title="Cute Elephants"><span><img src="elephants500500.jpg" alt="Cute Elephants"/>9</span></a>
 	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="#">slider</a> by WOWSlider.com v8.7</div>
 	<div class="ws_shadow"></div>
 	</div>	
