--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		<a href="#" title="Adventure Boating"><span><img src="adventboating500500.jpg" alt="Adventure Boating"/>7</span></a>
 		<a href="#" title="Bird-Watching"><span><img src="birdwatching500400.jpg" alt="Bird-Watching"/>8</span></a>
 		<a href="#" title="Cute Elephants"><span><img src="elephants500500.jpg" alt="Cute Elephants"/>9</span></a> -->
-	</div></div><div class="ws_script" style="position:absolute;left:-50%"><a href="#">slider</a> by WOWSlider.com v8.7</div>
+	</div></div><div class="ws_script" style="position:absolute;center:-99%"><a href="#">slider</a> by WOWSlider.com v8.7</div>
 	<div class="ws_shadow"></div>
 	</div>	
 	<script type="text/javascript" src="wowslider.js"></script>
