--- a/index.html
+++ b/index.html
@@ -2,12 +2,179 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>RESTAURANT PAGE</title>
+<style type="text/css">
+h1
+  {
+   text-align:center;
+   font-family:"Comic Sans MS", cursive; 
+   text-transform:uppercase;
+   text-shadow:3px 2px 4px orange;
+   color:#F00;
+   }
+
+
+h2
+{
+  text-align:center;
+  font-family:"Comic Sans MS", cursive;
+  color: #F00;
+  text-shadow:#0F6;
+ }
+ h3
+{
+  
+  font-family:"Comic Sans MS", cursive;
+  color: #F00;
+  text-shadow:#0F6;
+ }
+ 
+l
+{
+	font-family:"Comic Sans MS", cursive;
+	font-size:24px;
+	color:#093;
+	text-indent:150px;
+	text-align:justify;
+	text-shadow:#0F0;
+	line-height:1.3;
+	word-spacing:3px;
+	letter-spacing:1px;
+}
+n
+{font-family:"Comic Sans MS", cursive;
+ color:#F00;
+ margin-top:100px;
+ margin-left:650px;
+ font-size:24px;
+}
+
+
+p
+{  font-family:Verdana, Geneva, sans-serif;
+   color:#03F;
+  margin-top:-100px;
+  margin-left:200px;
+ font-size:24px;
+}
+
+ 
+.transbox
+{
+ margin:30px;
+ background-color:white;
+  opacity:.7;
+}
+</style>
 </head>
 
 <body>
-<center><video width="1540" height="600" controls>
-<source src="KERALA Thamarassery Churam  Aerial Helicam Video.mp4" type="video/mp4" />
-</video>
+<img style="margin-left:300px" src="../Images/pizzacombo.jpeg" width="800" height="400"/>
+
+<marquee direction="left"; scrollamount=".7"><span style="font-size:large;color:#F00; font-family:'Comic Sans MS', cursive"> T O D A Y 'S    S P E C I A L    O F F E R    2  M E D I E U M     P I Z Z A S  F O R    RS 199/-    O N L Y </span> </marquee>
+
+
+
+<h1>WELCOME TO PIZZA CORNER</h1>
+
+<l>Pizza is a savory dish of Italian origin, consisting of a usually round, flattened base of leavened wheat-based dough topped with tomatoes, cheese, and various other ingredients baked at a high temperature, traditionally in a wood-fired oven.
+</l> 
+<br />
+
+ <H2>OUR SPECIALITIES</H2>
+
+<br />
+<br>
+
+<H2>  VEG PIZZAS </H2>
+<br />
+<br />
+
+<img src="../Images/farmfresh.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
+<img src="../Images/cheesecorn.gif" width="300" height="200" alt="pic of pizza4" title=""/>
+<img src="../Images/paneerpizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
+<img src="../Images/Vegextravaganza.jpeg" width="300" height="200"/>
+
+
+<H3 style="margin-left:20px">FARM HOUSE FRESH   <h3>
+<h3 style="margin-top:-50px;margin-left:340px " > CHEESE N CORN  <h3>
+<h3 style="margin-top:-41px;margin-left:650px">PANEER DELIGHT<h3>
+<H3 style="margin-top:-50px; margin-left:970px"> VEG EXTRAVAGANZA<h3>
+
+<br />
+
+<H2> NON  VEG  PIZZAS </H2>
+
+
+<img src="../Images/chickenbbq-pizza.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
+<img src="../Images/chickentikka-pizza.jpg" width="300" height="200" alt="pic of pizza4" title=""/>
+<img src="../Images/seafood-pizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
+<img src="../Images/pepperoni-pizza.jpg" width="300" height="200"/>
+
+<H3 style="margin-left:20px">BBQ CHICKEN   <h3>
+<h3 style="margin-top:-50px;margin-left:340px " > CHICKEN TIKKA  <h3>
+<h3 style="margin-top:-41px;margin-left:650px"> SEAFOOD DELIGHT <h3>
+<H3 style="margin-top:-50px; margin-left:970px"> PEPPERONI <h3>
+
+
+<br />
+<br />
+<br />
+
+<H2>  S T A R T E R S  </H2>
+<br />
+
+<img src="../Images/paneer.jpg"  width="300" height="200" alt="pic of pizza3" title=""/>
+<img src="../Images/seafoodstarter.jpg" width="300" height="200" alt="pic of pizza4" title=""/>
+<img src="../Images/chickenstarter.jpg" width="300" height="200" alt="pic of pizza5" title="" />
+<img src="../Images/tikkakabab.jpg" width="300" height="200" />
+
+<H3 style="margin-left:20px"> PANEER TIKKA   <h3>
+<h3 style="margin-top:-50px;margin-left:340px " > SEAFOOD STARTER <h3>
+<h3 style="margin-top:-41px;margin-left:650px">CHICKEN TANDOORI<h3>
+<H3 style="margin-top:-50px; margin-left:970px"> TIKKA KABAB<h3>
+
+
+<br />
+<br />
+
+<img style="margin-right:700px" src="../Images/rest.png" width="200"  height="200" />
+
+<H4 style="margin-top:-150px;margin-left:220px" >P I Z Z A   C O R N E R</H4>
+<H4 style="margin-left:220px" >K A N N U R  R O A D</H4>
+<H4 style="margin-left:220px" >C A L I C U T</H4>
+
+
+
+
+<form method="post" action="#">
+<table style="margin-top:-150px;margin-left:500px" align="center" width="500" cellpadding="15" cellspacing="15" bgcolor="grey">
+
+<tr><td style="color:#FFF"  colspan="2"> <center>Enquire Now </center>
+</td></tr>
+
+<tr><td bgcolor="black" style="color:#FFF" >NAME </td><td><input type="text"</td></td></tr>
+<tr><td bgcolor="black" style="color:#FFF">EMAIL </td> <td><input type="email" </td></tr>
+<tr><td bgcolor="black" style="color:#FFF">PHONE NO:</td><td>  <input type="number" class="hg"</td></tr>
+
+ <tr><td bgcolor="#000000" style="color:#FFF">Your message here:<textarea rows="5" cols="24"></textarea></td></tr>
+
+<tr><td></td><td bgcolor="Red" style="color:#F00"><input type="submit" value="SUBMIT" class="hg"</td></tr>
+
+</table>
+
+
+
+
+
+
+<BR/>
+
+<br />
+<br />
+
+
+
+
 </body>
 </html>
