--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ p
 </head>
 
 <body>
-<img style="margin-left:300px" src="../Images/pizzacombo.jpeg" width="800" height="400"/>
+<img style="margin-left:300px" src="pizzacombo.jpeg" width="800" height="400"/>
 
 <marquee direction="left"; scrollamount=".7"><span style="font-size:large;color:#F00; font-family:'Comic Sans MS', cursive"> T O D A Y 'S    S P E C I A L    O F F E R    2  M E D I E U M     P I Z Z A S  F O R    RS 199/-    O N L Y </span> </marquee>
 
@@ -90,10 +90,10 @@ p
 <br />
 <br />
 
-<img src="../Images/farmfresh.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
-<img src="../Images/cheesecorn.gif" width="300" height="200" alt="pic of pizza4" title=""/>
-<img src="../Images/paneerpizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
-<img src="../Images/Vegextravaganza.jpeg" width="300" height="200"/>
+<img src="farmfresh.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
+<img src="cheesecorn.gif" width="300" height="200" alt="pic of pizza4" title=""/>
+<img src="paneerpizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
+<img src="Vegextravaganza.jpeg" width="300" height="200"/>
 
 
 <H3 style="margin-left:20px">FARM HOUSE FRESH   <h3>
@@ -106,10 +106,10 @@ p
 <H2> NON  VEG  PIZZAS </H2>
 
 
-<img src="../Images/chickenbbq-pizza.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
-<img src="../Images/chickentikka-pizza.jpg" width="300" height="200" alt="pic of pizza4" title=""/>
-<img src="../Images/seafood-pizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
-<img src="../Images/pepperoni-pizza.jpg" width="300" height="200"/>
+<img src="chickenbbq-pizza.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
+<img src="chickentikka-pizza.jpg" width="300" height="200" alt="pic of pizza4" title=""/>
+<img src="seafood-pizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
+<img src="pepperoni-pizza.jpg" width="300" height="200"/>
 
 <H3 style="margin-left:20px">BBQ CHICKEN   <h3>
 <h3 style="margin-top:-50px;margin-left:340px " > CHICKEN TIKKA  <h3>
@@ -124,10 +124,10 @@ p
 <H2>  S T A R T E R S  </H2>
 <br />
 
-<img src="../Images/paneer.jpg"  width="300" height="200" alt="pic of pizza3" title=""/>
-<img src="../Images/seafoodstarter.jpg" width="300" height="200" alt="pic of pizza4" title=""/>
-<img src="../Images/chickenstarter.jpg" width="300" height="200" alt="pic of pizza5" title="" />
-<img src="../Images/tikkakabab.jpg" width="300" height="200" />
+<img src="paneer.jpg"  width="300" height="200" alt="pic of pizza3" title=""/>
+<img src="seafoodstarter.jpg" width="300" height="200" alt="pic of pizza4" title=""/>
+<img src="chickenstarter.jpg" width="300" height="200" alt="pic of pizza5" title="" />
+<img src="tikkakabab.jpg" width="300" height="200" />
 
 <H3 style="margin-left:20px"> PANEER TIKKA   <h3>
 <h3 style="margin-top:-50px;margin-left:340px " > SEAFOOD STARTER <h3>
@@ -138,7 +138,7 @@ p
 <br />
 <br />
 
-<img style="margin-right:700px" src="../Images/rest.png" width="200"  height="200" />
+<img style="margin-right:700px" src="rest.png" width="200"  height="200" />
 
 <H4 style="margin-top:-150px;margin-left:220px" >P I Z Z A   C O R N E R</H4>
 <H4 style="margin-left:220px" >K A N N U R  R O A D</H4>
