--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ p
 <br />
 <br />
 
-<img src="farmfresh.jpg" width="300" height="200" alt="pic of pizza3" title=""/>
-<img src="cheesecorn.gif" width="300" height="200" alt="pic of pizza4" title=""/>
-<img src="paneerpizza.jpg" width="300" height="200" alt="pic of pizza5" title="" />
-<img src="Vegextravaganza.jpeg" width="300" height="200"/>
+<img src="farmfresh.jpg" width="300" height="200" class="img-responsive" alt="pic of pizza3" title=""/>
+<img src="cheesecorn.gif" width="300" height="200" class="img-responsive" alt="pic of pizza4" title=""/>
+<img src="paneerpizza.jpg" width="300" height="200" class="img-responsive" alt="pic of pizza5" title="" />
+<img src="Vegextravaganza.jpeg" class="img-responsive" width="300" height="200"/>
 
 
 <H3 style="margin-left:20px">FARM HOUSE FRESH   <h3>
