--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ p
 <br />
 <br />
 
-    <div class="container-fluid" style="margin-top:100px">
+   <!-- <div class="container-fluid" style="margin-top:100px">
       <div class="row">
 
       <div class="col-md-3">
@@ -110,15 +110,15 @@ p
        </div>
         
       </div>
-      </div>
+      </div>  -->
 
 
 
 
-<!--<img src="farmfresh.jpg"  class="img-responsive" alt="pic of pizza3" title=""/>
-<img src="cheesecorn.gif"  class="img-responsive" alt="pic of pizza4" title=""/>
-<img src="paneerpizza.jpg"  class="img-responsive" alt="pic of pizza5" title="" />
-<img src="Vegextravaganza.jpeg" class="img-responsive" alt="pic of pizza6" title=""/>  -->
+<img src="vegpizza1-300-250.jpg"  class="img-responsive" alt="pic of pizza3" title=""/>
+<img src="vegpizza1-300-250.jpg"  class="img-responsive" alt="pic of pizza4" title=""/>
+<img src="vegpizza1-300-250.jpg"  class="img-responsive" alt="pic of pizza5" title="" />
+<img src="vegpizza1-300-250.jpg" class="img-responsive" alt="pic of pizza6" title=""/>  
 
 
 <H3 style="margin-left:20px">FARM HOUSE FRESH   <h3>
