--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@ p
 <img src="vegpizza1-300-250.jpg"  class="img-responsive" alt="pic of pizza3" title=""/>
 <img src="vegpizza1-300-250.jpg"  class="img-responsive" alt="pic of pizza4" title=""/>
 <img src="vegpizza1-300-250.jpg"  class="img-responsive" alt="pic of pizza5" title="" />
-<!--<img src="vegpizza1-300-250.jpg" class="img-responsive" alt="pic of pizza6" title=""/> --> 
+<img src="vegpizza1-300-250.jpg" class="img-responsive" alt="pic of pizza6" title=""/>  
 
 
-<H3 style="margin-left:20px">FARM HOUSE FRESH   <h3>
-<h3 style="margin-left:50px " > CHEESE N CORN  <h3>
-<h3 style="margin-left:80px">PANEER DELIGHT<h3>
+<H3 style="margin-left:20px">FARM HOUSE FRESH   CHEESE N CORN  PANEER DELIGHT    <h3>
+<!--<h3 style="margin-left:50px " > CHEESE N CORN  <h3>
+<h3 style="margin-left:80px">PANEER DELIGHT<h3>-->
 
 <!--<H3 style="margin-top:-50px; margin-left:970px"> VEG EXTRAVAGANZA<h3>-->
 
