--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>RESTAURANT PAGE</title>
+<title>PORTFOLIO HOME PAGE</title>
 <style type="text/css">
 h1
   {
@@ -69,13 +69,13 @@ p
 </head>
 
 <body>
-<img style="margin-left:300px" src="pizzacombo.jpeg" width="800" height="400"/>
+<img style="margin-left:300px" src="bk-image-1280-720.jpeg" width="1300" height="800"/>
 
-<marquee direction="left"; scrollamount=".7"><span style="font-size:large;color:#F00; font-family:'Comic Sans MS', cursive"> T O D A Y 'S    S P E C I A L    O F F E R    2  M E D I E U M     P I Z Z A S  F O R    RS 199/-    O N L Y </span> </marquee>
+<marquee direction="left"; scrollamount=".7"><span style="font-size:large;color:#F00; font-family:'Comic Sans MS', cursive"> T H IS   P A G E   I S   U N D E R   C O N S T R U C T I O N   . . . . .  . .</span> </marquee>
 
 
 
-<h1>WELCOME TO PIZZA CORNER</h1>
+<h1>HELLO  WORLD !</h1>
 
 <l>Pizza is a savory dish of Italian origin, consisting of a usually round, flattened base of leavened wheat-based dough topped with tomatoes, cheese, and various other ingredients baked at a high temperature, traditionally in a wood-fired oven.
 </l> 
