--- a/index.html
+++ b/index.html
@@ -65,11 +65,21 @@ p
  background-color:white;
   opacity:.7;
 }
+
+
+body
+	{
+	  background-image:url(bk-image-1280-720.jpeg);
+	  background-size:cover;
+	  background-position:center;
+	  background-attachment:fixed;
+	  
+	}
 </style>
 </head>
 
 <body>
-<img style="margin-left:300px" src="bk-image-1280-720.jpeg" width="1300" height="800"/>
+<!--<img style="margin-left:300px" src="bk-image-1280-720.jpeg" width="1300" height="800"/>-->
 
 <marquee direction="left"; scrollamount=".7"><span style="font-size:large;color:#F00; font-family:'Comic Sans MS', cursive"> T H IS   P A G E   I S   U N D E R   C O N S T R U C T I O N   . . . . .  . .</span> </marquee>
 
