--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 <p1>
 <h3><center>Emily Joshy <h3>
 <h4><center>I'm a front end web developer<h4> 
+</h4></p1>
+<button type="button" class="btn btn-info" style="margin-left:30px " data-toggle="collapse" data-target="#demo2">About me</button>
 
-
-</p1>
 </div>
 </div>
 </div> 
@@ -262,9 +262,10 @@
 <div class="jumbotron"  style="background-color:#003"  >
 <p1>
 <h4><center>Hello, I'm </h4></center>
-<center><h3><p1>Emily Joshy</h3></center>
-<h4><center>I'm a front end web developer.</h4></center>
 
+<h3><center>Emily Joshy</h3></center> 
+<h4><center>I'm a front end web developer.</h4></center>
+<button type="button" class="btn btn-info" style="margin-left:570px " data-toggle="collapse" data-target="#demo2">About me</button>
 </p1>
 </div>
 </div>
